# job_applier

./: .env.example  .gitignore  README.md  candidate_profile.md  pyproject.toml
app/: __init__.py  cli.py  config.py  cover_letter_profiles.py  formatter.py  llm_client.py  models.py  profile_loader.py  prompt_loader.py  requirement_matcher.py  skills_profile_loader.py  title_rules.py  vacancy_analyzer.py
docs/: ARCHITECTURE.md  CHEATSHEET.md  COMMANDS.md  SECURITY.md  TROUBLESHOOTING.md
examples/: vacancy.txt
job_vacancy_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
profiles/: candidate_profile.md  candidate_skills.yml  cover_letter_relocation_new_zealand.md
prompts/: analyze_vacancy.md  create_cover_letter.md
tests/: test_analysis_ux_fixes.py  test_application_history.py  test_cli_validation.py  test_collect_greenhouse_cli.py  test_collect_hh_cli.py  test_collect_linkedin_email_cli.py  test_config_greenhouse.py  test_cover_letter_profiles.py  test_email_imap_client.py  test_formatter.py  test_greenhouse_collector.py  test_hh_client.py  test_hh_collector.py  test_hh_models.py  test_imap_checkpoint_storage.py  test_linkedin_email_collector.py  test_linkedin_email_parser.py  test_linkedin_imap_incremental.py  test_llm_client.py  test_multi_source_merge.py  test_pipeline_runtime.py  test_preparation_service.py  test_prepare_telegram_applications_cli.py  test_preview_linkedin_email_cli.py  test_profile_loader.py  test_prompt_rules.py  test_requirement_matcher.py  test_resume_cache_service.py  test_run_cli.py  test_seen_jobs.py  test_telegram_cli.py  (+9 more)
(+20 files in other folders)
