[project]
name = "job-vacancy-analyzer"
version = "0.1.0"
description = "Small CLI tool to analyze vacancies against a candidate profile."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "typer>=0.16.0",
  "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "respx>=0.22.0",
  "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
